@@ -193,6 +193,11 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
 
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+    getMainClass().set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
 
 project.ext {
     pactVersion = getCheckedOutGitCommitHash()
@@ -347,6 +352,7 @@ dependencies {
     testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
     testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
     testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+    testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
 
     testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
 
